<?xml version="1.0"?>
<package format="2">
	<name>se2_planning</name>
	<version>0.1.0</version>
	<description>Pure pursuit controller.</description>
	<maintainer email="jelavice@ethz.ch">Edo Jelavic</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	
	<depend>eigen</depend>
	<depend>ompl</depend>
	<depend>grid_map_core</depend>
        <depend>grid_map_msgs</depend>
        <depend>grid_map_ros</depend>
        <depend>roscpp</depend>
        <depend>se2_navigation_msgs</depend>
	<depend>boost</depend>
	
</package>
